objects/Deployment_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>Assemble_Request_Error__c</fullName>
        <label>Assemble Request Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>Build__c</referenceTo>
        <relationshipName>Deployment_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Deployment Attempts</relationshipLabel>
        <relationshipName>Deployment_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Quick_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quick Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Components_Deployed__c</fullName>
        <label>Number Components Deployed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Components_Errors__c</fullName>
        <label>Number Components Errors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Components_Total__c</fullName>
        <label>Number Components Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Test_Errors__c</fullName>
        <label>Number Test Errors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Tests_Completed__c</fullName>
        <label>Number Tests Completed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Tests_Total__c</fullName>
        <label>Number Tests Total</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Deployment Attempts</relationshipLabel>
        <relationshipName>Deployment_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Managed_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Managed Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Deployment_Id__c</fullName>
        <label>SF Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Detail__c</fullName>
        <label>State Detail</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Deployment Attempts</relationshipLabel>
        <relationshipName>Deployment_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Level__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Code_Coverage__c</fullName>
        <label>Total Code Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Lines_Not_Covered__c</fullName>
        <label>Total Lines Not Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lines__c</fullName>
        <label>Total Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deployment Attempt</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deployment Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>